--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@vercel/analytics": "^1.1.2",
     "class-variance-authority": "^0.7.0",
@@ -18,6 +19,7 @@
     "cmdk": "^0.2.0",
     "lucide-react": "^0.300.0",
     "next": "14.0.4",
+    "openai": "^4.26.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.0",
