--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.300.0",
     "next": "^15.1.7",
     "openai": "^4.26.1",
     "react": "^18",
     "react-dom": "^18",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.8.0",
