--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.300.0",
     "next": "^15.1.7",
+    "next-themes": "^0.4.6",
     "openai": "^4.26.1",
     "react": "^18",
     "react-dom": "^18",
